# gnu_ttb

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  configure.ac
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  eo.po  pl.po
src/: Makefile.am  gtk-prefs-main.c  gtk-prefs-module.c  gtk-prefs-module.h  main.c  ttb-app.c  ttb-app.h  ttb-base.c  ttb-base.h  ttb-fbase.c  ttb-fbase.h  ttb-module.c  ttb-module.h  ttb-prefs.c  ttb-prefs.h  ttb-ui.c  ttb-ui.h  ui-gtk-prefs.c  ui-gtk-prefs.h  ui-gtk.c  ui-gtk.h
src/glade/: fixgladefiles.sh  prefs.glade  prefs.ui
